# surfgram

./: .flake8  .npmrc  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test.ts  tsconfig.json
.github/workflows/: format.yml  generate.yml  publish.yml  test.yml
.pnpm/: approved-builds.json
codegen/: .npmrc  .prettierignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
codegen/src/: index.ts
codegen/templates/: bot_types.d.ts.njk  doc_fluent_event_handling.md.njk  doc_method.md.njk  doc_readme.md.njk  doc_type.md.njk  fluent_events.ts.njk  fluent_methods.ts.njk  index.ts.njk  interface.ts.njk  interfaces_index.ts.njk  main_index.ts.njk  method.ts.njk  methods_index.ts.njk  test_method.ts.njk  test_type.ts.njk  type.ts.njk
docs/: README.md  bot.md  core-concepts.md  introducing.md  plugins.md  webhooks.md
docs/fluent/: best-practices.md  event-handling.md  quick-start.md
docs/methods/: addStickerToSet.md  answerCallbackQuery.md  answerChatJoinRequestQuery.md  answerGuestQuery.md  answerInlineQuery.md  answerPreCheckoutQuery.md  answerShippingQuery.md  (+178 more)
examples/: basicBot.ts  botWithPlugins.ts  pluginExample.ts  skipUpdatesBot.ts  webhookBot.ts
src/: index.ts
surfgram/: __init__.py  __init__.py.bak
tests/: bot.test.ts  longPolling.test.ts  plugin.test.ts  test_api_object.py  test_base_config.py  test_base_listener.py  test_bot.py  test_camel_case_converter.py  test_html.py  test_in_memory_storage.py  test_link.py  test_markdown.py  test_redis_storage.py  test_snake_case_converter.py  test_state.py  test_states.py  test_token.py  utils.test.ts  webhook.test.ts
(+2586 files in other folders)
