[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "surfgram"
version = "1.0.1"
description = "Modern asynchronous Telegram bot framework"
authors = ["anybody <help.surfgram@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/surfgram/surfgram"
repository = "https://github.com/surfgram/surfgram"
documentation = "https://github.com/surfgram/surfgram-docs"
keywords = [
    "telegram",
    "bot",
    "framework",
    "async",
    "aiohttp",
    "telegram-api",
    "python-telegram-bot",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
surfgram_internal = "0.2"
uvloop = { version = "^0.18.0", optional = true }
surfgram_cli = "^1.0.1"
redis = { version = "6.0.0", optional = true }

[poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.scripts]
surfgram = "surfgram_cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/surfgram/surfgram/issues"
"Changelog" = "https://github.com/surfgram/surfgram/releases"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"